<resources>
    <string name="app_name">Air Mules</string>
    <string name="geo_pref_menu">Preferred Locations</string>
    <string name="addGeoPrefTitle">Add Specific Location</string>

    <string name="payment_Mule">Mule:</string>
    <string name="payment_Price">Price:  $</string>
    <string name="payment_Fee">Service Fee:  $</string>
    <string name="payment_Total">Total:  $</string>
    <string name="payment_Type">Payment Methods</string>
    <string name="payment_InApp">In App Currency</string>
    <string name="payment_Credit">Credit Card</string>

    <string name="tracking_enabled_notif">Tracking is currently enabled. Tap to cancel.</string>
    <string name="test_email">test@test.com</string>
    <string name="test_password">testpassword</string>
    <string name="firebase_path">location</string>

    <string name="all_transactions">All Requests for Mules:</string>
    <string name="customer_transactions">Your Requests:</string>
    <string name="mule_transactions">Your Mule Jobs:</string>

    <string name="filter">Filter Requests</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear Filters</string>

    <string name="from_location">From:</string>
    <string name="to_location">To:</string>
    <string name="arrival_date">Arrive By:</string>
    <string name="posted_price">Reward:</string>

    <string name="txtMoneyleft">Money:</string>
    <string name="txtSeeRequest">See all your Requests</string>
    <string name="txtSeeTravel">See all your travels</string>
    <string name="txtSeeMuleJobs">See all your Mule jobs</string>
    <string name="txtSignOut">Sign Out</string>
    <string name="txtDeparture">Departure</string>
    <string name="txtArrival">Arrival</string>
    <string name="txtDate">Date</string>
    <string name="txtItem">Item</string>
    <string name="txtWeight">Weight</string>
    <string name="txtSize">Size</string>
    <string name="txtChat">Chat</string>
    <string name="txtPay">Pay</string>

    <!--For creating a request START-->
    <string name="createNewReq">Create A New Request</string>

    <string name="itemInfo">Item Information</string>
    <string name="itemName">Name</string>
    <string name="itemWeight">Weight (lbs)</string>
    <string name="itemHeight">Height (in)</string>
    <string name="itemLength">Length (in)</string>
    <string name="itemWidth">Width (in)</string>

    <string name="reqReward">Reward ($)</string>

    <string name="reqDeparture">Departure</string>
    <string name="reqArrival">Arrival</string>
    <string name="reqCity">City</string>
    <string name="reqCityOptional">City (Optional)</string>
    <string name="reqCountry">Country</string>
    <string name="reqDate">Date</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_all_requests">View All Requests</string>
    <string name="view_user_profile">View Profile</string>
    <string name="mule_name">Mule</string>
    <string name="colon">:</string>
    <string name="rating">Rating</string>
    <string name="departure_date">Departure Date</string>
    <string name="destination">Destination</string>
    <string name="arrival_data_no_colon">Arrive By</string>

    <string name="deposit_spinner">Deposit Method</string>
    <string name="view_mules">View Mules</string>
    <string name="flight">Flight</string>
    <string name="location">View Location</string>
    <string name="update">Update Flight</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="port_of_origin">Port of Origin</string>
    <string name="destination_city">Destination City</string>
    <string name="flight_number">Flight Number</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="balance_with_colon">Balance:</string>
    <string name="add_money">Add Money</string>
    <string name="withdraw">Withdraw</string>
    <string name="mule_rating_with_colon">Mule Rating:</string>
    <string name="choose_account_with_colon">Choose:</string>
    <string name="enter_account">Account:</string>
    <string name="amount_with_colon">Amount:</string>
    <string name="badresponse">{"error": "No Record Found or Flight not currently detected by receivers. " }</string>
    <string-array name="methods">
        <item>Bank</item>
        <item>Venmo</item>
        <item>PayPal</item>
    </string-array>

</resources>
