<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LauncherActivity">

    <Button
        android:id="@+id/btnViewAllRequests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_requests"
        android:layout_marginTop="50dp" />
    <Button
        android:id="@+id/btnSeeUserProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_user_profile"
        android:layout_below="@id/btnViewAllRequests" />

    <Button
        android:id="@+id/btnPostRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createNewReq"
        android:layout_below="@id/btnSeeUserProfile" />
    <Button
        android:id="@+id/btnViewMuleRequests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSeeMuleJobs"
        android:layout_below="@id/btnPostRequest" />

    <Button
        android:id="@+id/btnViewPersonalRequests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSeeRequest"
        android:layout_below="@id/btnViewMuleRequests" />


</RelativeLayout>