<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestDetailActivity">

    <TextView
        android:id="@+id/txtLabelSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtLabelDeparture"
        android:layout_marginBottom="170dp"
        android:text="@string/txtSize"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtLabelWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/txtLabelDeparture"
        android:layout_marginBottom="220dp"
        android:text="@string/txtWeight"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtLabelDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtLabelDeparture"
        android:layout_marginTop="152dp"
        android:text="@string/txtDate"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtLabelArrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtLabelDeparture"
        android:layout_marginTop="99dp"
        android:text="@string/txtArrival"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtLabelItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/txtLabelDeparture"
        android:layout_marginTop="208dp"
        android:text="@string/txtItem"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtLabelDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/txtViewDeparture"
        android:layout_marginStart="71dp"
        android:text="@string/txtDeparture"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/txtViewDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="108dp"
        android:layout_marginTop="44dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnFlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnChat"
        android:layout_marginEnd="35dp"
        android:text="Flight" />

    <Button
        android:id="@+id/btnCancelRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnSignUpForMule"
        android:layout_marginEnd="73dp"
        android:text="Cancel" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnFlight"
        android:layout_toStartOf="@+id/textViewWeight"
        android:text="@string/txtPay" />

    <Button
        android:id="@+id/btnSignUpForMule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnChat"
        android:layout_marginBottom="22dp"
        android:text="Sign up for mule" />

    <Button
        android:id="@+id/btnChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtLabelArrival"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:text="@string/txtChat" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtLabelWeight"
        android:layout_toStartOf="@+id/txtViewDeparture"
        android:text="10"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/txtViewDeparture"
        android:layout_alignTop="@+id/txtLabelSize"
        android:text="1 X 2 X 3"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/txtViewDeparture"
        android:layout_alignTop="@+id/txtLabelItem"
        android:text="coffee"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/txtViewDeparture"
        android:layout_alignTop="@+id/txtLabelDate"
        android:text="20180101"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewArrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/txtViewDeparture"
        android:layout_alignTop="@+id/txtLabelArrival"
        android:text="boston"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/txtViewDeparture"
        android:layout_alignTop="@+id/txtViewDeparture"
        android:text="shanghai"
        android:textSize="24sp" />
</RelativeLayout>