<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bgi2"
    android:orientation="vertical"
    tools:context=".PaymentActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:alpha="0.9"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dancing"
                android:text="@string/payment_Mule"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtMuleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/dancing"

                android:text="John Doe"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_Price"
                android:fontFamily="@font/dancing"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/dancing"
                android:inputType="numberDecimal"
                android:text="100"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_Fee"
                android:fontFamily="@font/dancing"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtFeeAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/dancing"
                android:text="10"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dancing"
                android:text="@string/payment_Total"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/dancing"
                android:text="110"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPaymentType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_Type"
                android:fontFamily="serif"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnPayInApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/fbutton_default_color"
                android:text="@string/payment_InApp" />

            <Button
                android:id="@+id/btnPayCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/fbutton_color_turquoise"
                android:text="@string/payment_Credit" />

        </LinearLayout>

    </LinearLayout>




</LinearLayout>