<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <TextView
        android:id="@+id/txtViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="57dp"
        android:layout_marginTop="59dp"
        android:text="UserDisplayName"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageViewUserProfile"
        android:layout_width="72dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/approve_otp_button" />

    <TextView
        android:id="@+id/txtViewMoneyLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtViewUserName"
        android:layout_alignTop="@+id/txtLabelMoney"
        android:text="00000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtLabelMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btnSeeRequest"
        android:layout_marginTop="154dp"
        android:text="@string/txtMoneyleft"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnSeeRequest"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/txtSeeRequest" />

    <Button
        android:id="@+id/btnSeeTravel"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="159dp"
        android:text="@string/txtSeeTravel" />

    <Button
        android:id="@+id/btnSeeChat"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="88dp"
        android:text="@string/txtSeeChat" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/txtSignOut" />

</RelativeLayout>